# CrawlForge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: README.md  run_benchmark.py
crawlforge/: __init__.py  adapter.py  cli.py  generator.py  orchestrator.py  registry.py  runtime.py
crawlforge/adapter/: __init__.py  arcade_adapter.py  base.py  games.yaml  poker_adapter.py  registry.py  slot_adapter.py
crawlforge/ai_pipeline/: __init__.py  config.py  models.py  pipeline.py
crawlforge/checkpoint/: __init__.py  manager.py
crawlforge/core/: __init__.py  dataclasses.py  exceptions.py  interfaces.py  models.py
crawlforge/data/: __init__.py  collector.py  exporter.py
crawlforge/detector/: __init__.py  phases.py  slot_detector.py
crawlforge/detectors/: __init__.py  slot_detector.py
crawlforge/evolution/: __init__.py  engine.py  fixer.py
crawlforge/react/: __init__.py  loop.py  models.py
crawlforge/runtimes/: __init__.py  adb_runtime.py  playwright_runtime.py
crawlforge/scheduler/: __init__.py  cron.py  queue.py  retry.py  session_pool.py
crawlforge/template_matching/: __init__.py  calibrator.py  config.py  matcher.py  models.py  registry.py
crawlforge/template_store/: __init__.py  matcher.py  store.py
crawlforge/uiauto/: __init__.py  runtime.py  template_store.py  ui_element.py  uiauto_runtime.py
docs/: ARCHITECTURE-v2.md  ARCHITECTURE-v3.md  HARNESS-DESIGN.md  ITERATION-PLAN.md  LANDSCAPE.md  PROGRESS.md  PROJECT-DEEPDIVE.md
docs/modules/: MODULE-01-foundation.md  MODULE-02-runtime.md  MODULE-03-ai-pipeline.md  MODULE-04-react-loop.md  MODULE-05-checkpoint.md  MODULE-06-evolution.md  (+4 more)
examples/: README.md  full_demo.py  slot_machine_demo.py
tests/: test_ai_pipeline.py  test_ai_pipeline_models.py  test_checkpoint.py  test_checkpoint_manager.py  test_core_exceptions.py  test_core_models.py  test_data_collector.py  test_dataclasses.py  test_evolution.py  test_integration.py  test_react.py  test_scheduler.py  test_slot_detector.py  test_template_matching.py  test_template_store.py  test_ui_element.py  test_ui_element_encoder.py  test_uiauto_runtime.py
