[project]
name = "crawlforge"
version = "0.1.0"
description = "AI-driven multi-game crawler framework"
authors = [
    {name = "CrawlForge Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "uiautomator2>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
crawlforge = "crawlforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawlforge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
no_implicit_optional = false

# Core modules with stricter type checking
[[tool.mypy.overrides]]
module = [
    "crawlforge/core/*",
    "crawlforge/checkpoint/*",
    "crawlforge/adapter/base.py",
    "crawlforge/adapter/registry.py",
    "crawlforge/template_matching/*",
]
strict = false
disallow_untyped_defs = true
